--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
     "@tsparticles/engine": "^3.9.1",
