--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.5"
   },
@@ -36,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "terser": "^5.44.0",
     "vite": "^6.3.5",
     "vite-plugin-svgr": "^4.3.0"
   }
